# statistics

./: .clang-format  .clang-tidy  .dockerignnore  .gitignore  Agents.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile.clang  Dockerfile.clang18  Dockerfile.gcc  Dockerfile.gcc14  Doxyfile  LICENSE  README.md  TODO.md  auto-formatt.sh  auto-formatting.sh  check-format-staged.sh  check-format.sh  check-formatting.sh  clang-tidy-prepare.sh  clang-tidy-run-checks.sh  coverage-report.ps1  coverage-report.sh  dockerLinuxBuildAndTest.sh  doxygen-docs.sh  format-check.sh  format-common.sh  format-fix.sh  format-staged.sh  linuxBuildAndTest.sh  minmax-value-natural-return-type.md  notes.txt  open-coverage-report.ps1  open-coverage-report.sh  print_compat.hpp  rebuildDockerImages.sh  statistics.cpp  statistics.hpp  (+12 more)
.githooks/: pre-commit
.github/: clang-tidy.yml
.github/workflows/: ci.yml  clang-format.yml  clang-tidy.yml  clang.yml  coverage.yml  cppcheck.yml  doxygen.yml  gcc.yml  msvc.yml  sanitizers.yml
cmake/: ClangFormat.cmake  ProjectInstrumentation.cmake  ProjectWarnings.cmake  statisticsConfig.cmake.in  statistics_version.hpp.in
docs/: llvm-setup.md  release-process.md  template-guide.md
include/: CalculationFloat.hpp  HighPrecisionFloat.hpp  numeric.hpp  print_compat.hpp  quartiles.hpp  resultTypes.hpp  statistics.hpp  summaryStats.hpp
statistics-cli/: statistics-cli.cpp
test/: print_compat.hpp  test_statistics.cpp
tipsAndTricks/: clang-tidy.md  cmake.md  doxygen.md  githubActions.md  windows-clang.md
tools/: version_bump.py
